--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,16 +2,27 @@
     <string name="app_name">App Task</string>
     <string name="hello_mostafa">Hello Mostafa!</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="add_new_item">Add New Item</string>
-    <string name="item_name">Item Name</string>
-    <string name="item_price">999999</string>
+    <string name="add_new_item" translatable="false">Add New Item</string>
+    <string name="item_name" translatable="false">Item Name</string>
+    <string name="item_price" translatable="false">999999</string>
     <string name="item_currency">EGP</string>
     <string name="name">Name</string>
     <string name="price">Price</string>
     <string name="quantity">Quantity</string>
     <string name="add">Add</string>
     <string name="add_product">Add Product</string>
-    <string name="back_arrow">Back arrow</string>
+    <string name="back_arrow" translatable="false">Back arrow</string>
+    <string name="email_or_phone_number">Email or phone number</string>
+    <string name="password">password</string>
+    <string name="log_in">Log In</string>
+    <string name="price_10_to_20">price:10 to 20</string>
+    <string name="price_20_to_30">price:20 to 30</string>
+    <string name="price_30_to_40">price:30 to 40</string>
+    <string name="product">Product</string>
+    <string name="delete_item">delete item</string>
+    <string name="dialogTitle" translatable="false">Delete Product </string>
+    <string name="dialogMessage" translatable="false">Are Sure Deleting Product</string>
+    <string name="logo">logo</string>
+    <string name="todo">TODO</string>
 
 </resources>
